Fix nav bar alignment

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body > div{
     gap: 10px;
     list-style: none;
     justify-content: center;
+    align-items: baseline;
 }
 
 .nav-bar a{
